--- a/mentee/templates/home.html
+++ b/mentee/templates/home.html
@@ -13,7 +13,7 @@
   <a class="btn btn-primary btn-lg" href="{% url 'register' %}" role="button">Click Here</a><br><br>
     <hr>
       <p><b>Sign Up To Be A mentor</b></p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Click Here</a>
+    <a class="btn btn-primary btn-lg" href="{% url 'register1' %}" role="button">Click Here</a>
 </div>
 
 
