--- a/mentee/templates/logout.html
+++ b/mentee/templates/logout.html
@@ -3,11 +3,13 @@
 
 {% block content %}
 
-<div class="container">
-    <h1>Logged Out </h1>
 
-     <p>You Have Logged Out!</p>
+<h2>You have been logged out</h2>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            <a href="{% url 'login' %}">Log In Again</a>
+        </small>
+    </div>
 
 
-
-</div>
+{% endblock %}
