--- a/mentee/templates/mentor/register1.html
+++ b/mentee/templates/mentor/register1.html
@@ -4,27 +4,29 @@
 
 {% block content %}
 
-    <div class="row">
+<div class="row">
         <div class="col-md-8">
-    <div class="content-section">
+ <div class="content-section">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
+                <legend class="border-bottom mb-4">Join Today</legend>
                 {{ form|crispy }}
+                {{ form1|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Login</button>
+                <button class="btn btn-outline-info" type="submit">Sign Up</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Need An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
+                Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
             </small>
         </div>
     </div>
         </div>
-    </div>
+</div>
+
 
 
 {% endblock %}
