Added custom user profile model and cbvs functions

--- a/mentee/templates/base.html
+++ b/mentee/templates/base.html
@@ -29,6 +29,8 @@
             <div class="navbar-nav">
              {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                <a class="nav-item nav-link" href="{% url 'Message' %}">Message</a>
+                <a class="nav-item nav-link" href="{% url 'account' %}">Account</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
                 <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
