--- a/mentee/templates/menti/inboxdetail.html
+++ b/mentee/templates/menti/inboxdetail.html
@@ -4,15 +4,11 @@
 {% block content %}
 
 <br><br><br>
-
+<p>Message Content</p>
 
 
 <p>From: {{ messo.sender }} </p>
-<p>To: {{ messo.receipient }} </p>
-<p>Message: {{ messo.msg_content }}</p>
-
-
-
+<p>Message:  {{ messo.msg_content }}</p>
 
 
 
