--- a/mentee/templates/menti/login.html
+++ b/mentee/templates/menti/login.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'menti/base.html' %}
 {% load crispy_forms_tags %}
 
 
 {% block content %}
-
+<br><br><br>
     <div class="row">
         <div class="col-md-8">
     <div class="content-section">
