--- a/mentee/templates/menti/profile.html
+++ b/mentee/templates/menti/profile.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'menti/base.html' %}
 {% load crispy_forms_tags %}
 
 
 {% block content %}
-
+<br><br><br>
    <div class="content-section">
       <div class="media">
          <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
