--- a/mentee/templates/menti/reply.html
+++ b/mentee/templates/menti/reply.html
@@ -1,18 +1,21 @@
 {% extends 'menti/base.html' %}
 {% load crispy_forms_tags %}
 
-
 {% block content %}
+
+
 <br><br><br>
-<div class="row">
-        <div class="col-md-8">
- <div class="content-section">
+<section>
+
+    <h1>Write Your Reply</h1>
+
+     <div class="content-section">
 
 
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Create Your Message</legend>
+                <legend class="border-bottom mb-4">Reply Your Message</legend>
                 {{ form|crispy }}
 
             </fieldset>
@@ -23,9 +26,8 @@
 
 
     </div>
-        </div>
-</div>
-
+</section>
 
 
 {% endblock %}
+
