--- a/mentee/templates/mentor/account1.html
+++ b/mentee/templates/mentor/account1.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'mentor/base1.html' %}
 
 
 {% block content %}
-
+<br><br><br>
 
    <main role="main" class="container">
       <div class="row">
