--- a/mentee/templates/mentor/base1.html
+++ b/mentee/templates/mentor/base1.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="{% static 'mentee/main.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-grid.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-reboot.css' %}">
 
     <title>Mentorship App</title>
   </head>
@@ -28,13 +31,14 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
              {% if user.is_authenticated %}
-                  <a class="nav-item nav-link" href="">Requests</a>
-                <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-                <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                <a class="nav-item nav-link" href="{% url 'profile1' %}">Profile</a>
+                <a class="nav-item nav-link" href="">Message</a>
+                <a class="nav-item nav-link" href="{% url 'account1' %}">Account</a>
+                <a class="nav-item nav-link" href="{% url 'logout1' %}">Logout</a>
               {% else %}
                 <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
-                <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                <a class="nav-item nav-link" href="{% url 'login1' %}">Login</a>
+                <a class="nav-item nav-link" href="{% url 'register1' %}">Register</a>
               {% endif %}
             </div>
           </div>
@@ -56,6 +60,8 @@
 
   {% block content %}
 
+    <br><br>
+
 
   {% endblock %}
 
@@ -68,5 +74,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+  <script src="{% static 'js/bootstrap.js' %}"></script>
+  <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
   </body>
 </html>
