--- a/mentee/templates/mentor/login1.html
+++ b/mentee/templates/mentor/login1.html
@@ -1,33 +1,30 @@
-{% extends 'menti/base.html' %}
+{% extends 'mentor/base1.html' %}
 {% load crispy_forms_tags %}
 
 
 {% block content %}
 
-<br><br><br>
-<div class="row">
+    <div class="row">
         <div class="col-md-8">
- <div class="content-section">
+    <div class="content-section">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4">Log In As A Mentor</legend>
                 {{ form|crispy }}
-                {{ form1|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+                Need An Account? <a class="ml-2" href="{% url 'register1' %}">Sign Up Now</a>
             </small>
         </div>
     </div>
         </div>
-</div>
-
+    </div>
 
 
 {% endblock %}
