--- a/mentee/templates/mentor/profile1.html
+++ b/mentee/templates/mentor/profile1.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %}
+{% extends 'mentor/base1.html' %}
 {% load crispy_forms_tags %}
 
 
 {% block content %}
 
+<br><br><br><br>
    <div class="content-section">
       <div class="media">
          <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
@@ -13,6 +14,23 @@
 
          </div>
       </div>
+
+      <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Profile Info</legend>
+                {{ u_form|crispy }}
+                {{ p_form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Update</button>
+            </div>
+        </form>
+
+
+
+
+
    </div>
 
 
