--- a/mentee/templates/mentor/register1.html
+++ b/mentee/templates/mentor/register1.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'mentor/base1.html' %}
 {% load crispy_forms_tags %}
 
 
@@ -20,7 +20,7 @@
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+                Already Have An Account? <a class="ml-2" href="{% url 'login1' %}">Sign In</a>
             </small>
         </div>
     </div>
