--- a/mentee/templates/menti/sent.html
+++ b/mentee/templates/menti/sent.html
@@ -12,6 +12,14 @@
 <p>Message: {{ messo.msg_content }}</p>
 
 
+<div class="container">
+
+  <p><a class="btn btn-danger" href="{% url 'delete' pk=messo.pk %}">Delete</a></p>
+
+
+</div>
+
+
 
 
 
