--- a/mentee/templates/menti/messages-module.html
+++ b/mentee/templates/menti/messages-module.html
@@ -1,9 +1,9 @@
 {% extends 'menti/base.html' %}
 
-
+{% load humanize %}
 {% block content %}
 <br><br><br>
-
+<p>{{ sentmesso.count }}</p>
    <main role="main" class="container">
       <div class="row">
 
