--- a/mentee/templates/menti/login.html
+++ b/mentee/templates/menti/login.html
@@ -4,27 +4,20 @@
 
 {% block content %}
 <br><br><br>
-    <div class="row">
-        <div class="col-md-8">
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Log In</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Login</button>
-            </div>
-        </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Need An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
-            </small>
-        </div>
-    </div>
-        </div>
-    </div>
+    <div class="container">
+    <div class="jumbotron">
+      <h1>Login here :</h1>
+<form method="post" action="{% url 'login' %}">
+          {% csrf_token %}
+          {# A more "HTML" way of creating the login form#}
+          <label for="username">Username:</label>
+          <input type="text" name="username" placeholder="Username">
+<label for="password">Password:</label>
+          <input type="password" name="password" placeholder="Password">
+<input type="submit" name="" value="Login">
+</form>
+</div>
+  </div>
 
 
 {% endblock %}
