added response and comment

--- a/mentee/templates/menti/sent.html
+++ b/mentee/templates/menti/sent.html
@@ -10,7 +10,8 @@
 <p>From: {{ messo.sender }} </p>
 <p>To: {{ messo.receipient }} </p>
 <p>Message: {{ messo.msg_content }}</p>
-
+<p>Approved: {{ messo.is_approved }}</p>
+<p>Comment: {{ messo.comment }}</p>
 
 <div class="container">
 
