--- a/mentee/templates/mentor/inboxview1.html
+++ b/mentee/templates/mentor/inboxview1.html
@@ -12,6 +12,8 @@
 <div class="container">
 
     <p><a class="btn btn-warning" href="{% url 'reply' pk=messo.pk %}">Reply</a></p>
+    <p><a class="btn btn-warning" href="{% url 'comment' pk=messo.pk %}">Approve</a></p>
+
 
 
 </div>
