--- a/mentee/templates/mentor/comment.html
+++ b/mentee/templates/mentor/comment.html
@@ -1,35 +1,13 @@
 {% extends "mentor/base1.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 	<h1>Review the application </h1>
 	<form method="post">
 		{% csrf_token %}
 
-		{% if form.non_field_errors %}
-			<div class="non-field-errors">
-				{% for error in form.non_field_errors %}
-					<span>{{ error }}</span>
-				{% endfor %}
-			</div>
-		{% endif %}
-
-		<label>
-			{{ form.is_approved }} {{ form.is_approved.label}}
-		</label>
-		<p><em>{{ form.is_approved.help_text }}</em></p>
-
-		<div>
-			<label>{{ form.comment.label }}</label>
-			{{ form.comment }}
-		</div>
-
-		{% if form.comment.errors %}
-			<div class="form-error">
-				{% for error in form.comment.errors %}
-					<span>{{ error }}</span>
-				{% endfor %}
-			</div>
-		{% endif %}
+		{{ form|crispy }}
 
 		<input type="submit" value="Submit Comment">
 	</form>
