--- a/mentee/templates/menti/approved.html
+++ b/mentee/templates/menti/approved.html
@@ -7,7 +7,30 @@
 
 <br><br><br>
 
-<h1>Here Are Your Approved Messages</h1>
+ <h1>Here Are Your Approved Messages</h1>
+
+
+
+
+   <main role="main" class="container">
+      <div class="row">
+        <div class="col-md-8">
+
+
+
+        </div>
+        <div class="col-md-12">
+          <div class="content-section">
+
+              <ul class="list-group">
+
+
+                  <div class="content-section">
+      <div class="media">
+
+
+
+
 
 
 
@@ -31,6 +54,28 @@
 <p>There Are no Approved Messages</p>
 
 {% endif %}
+
+
+
+
+      </div>
+
+   </div>
+
+
+
+
+
+              </ul>
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+
+
+
+
 
 
 {% endblock %}
