--- a/mentee/templates/mentor/sent1.html
+++ b/mentee/templates/mentor/sent1.html
@@ -14,7 +14,7 @@
 
 <div class="container">
 
-  <p><a class="btn btn-danger" href="{% url 'delete' pk=messo.pk %}">Delete</a></p>
+  <p><a class="btn btn-danger" href="{% url 'delete1' pk=messo.pk %}">Delete</a></p>
 
 
 </div>
