authentication permission fix

--- a/mentee/templates/mentor/listmessages1.html
+++ b/mentee/templates/mentor/listmessages1.html
@@ -11,7 +11,7 @@
   <ol>
       {% for messo in sentmesso %}
 
-      <h2><li><a href="{% url 'sent' pk=messo.pk %}">To {{ messo.receipient }} </a></li></h2>
+      <h2><li><a href="{% url 'sent1' pk=messo.pk %}">To {{ messo.receipient }} </a></li></h2>
 
 
       {% endfor %}
