approved messages user queryset fix

--- a/mentee/templates/base.html
+++ b/mentee/templates/base.html
@@ -12,6 +12,7 @@
       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-grid.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-reboot.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 
     <title>Mentorship App</title>
   </head>
@@ -56,6 +57,8 @@
                 {{ message }}
               </div>
             {% endfor %}
+
+
   {% endif %}
 
   {% block content %}
