--- a/mentee/templates/menti/base.html
+++ b/mentee/templates/menti/base.html
@@ -10,8 +10,10 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'mentee/main.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+
       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-grid.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-reboot.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 
     <title>Mentorship App</title>
   </head>
@@ -49,6 +51,8 @@
 
 
 <div class="container">
+
+    <br><br><br>
 
   {% if messages %}
             {% for message in messages %}
