--- a/mentee/templates/menti/login.html
+++ b/mentee/templates/menti/login.html
@@ -1,9 +1,12 @@
 {% extends 'menti/base.html' %}
+
+{% load static %}
+
 {% load crispy_forms_tags %}
 
 
 {% block content %}
-<br><br><br>
+
     <div class="container">
     <div class="jumbotron">
       <h1>Login here :</h1>
