--- a/mentee/templates/mentor/messages-module1.html
+++ b/mentee/templates/mentor/messages-module1.html
@@ -15,6 +15,7 @@
                 <li class="list-group-item list-group-item-light"><a href="{% url 'Message1' %}">Create New Message</a></li>
                 <li class="list-group-item list-group-item-light"><a href="{% url 'list1' %} ">Sent Messages</a></li>
                 <li class="list-group-item list-group-item-light"><a href="{% url 'inbox2' %}">Inbox</a></li>
+              <li class="list-group-item list-group-item-light"><a href="{% url 'approved1' %}">Approved Messages</a></li>
 
               </ul>
             </p>
