--- a/mentee/templates/mentor/messages-module1.html
+++ b/mentee/templates/mentor/messages-module1.html
@@ -14,8 +14,8 @@
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light"><a href="{% url 'Message1' %}">Create New Message</a></li>
                 <li class="list-group-item list-group-item-light"><a href="{% url 'list1' %} ">Sent Messages</a></li>
-                <li class="list-group-item list-group-item-light"><a href="{% url 'inbox2' %}">Inbox</a></li>
-              <li class="list-group-item list-group-item-light"><a href="{% url 'approved1' %}">Approved Messages</a></li>
+                <li class="list-group-item list-group-item-light"><a href="{% url 'inbox2' %}">Inbox ({{ count }})</a></li>
+              <li class="list-group-item list-group-item-light"><a href="{% url 'approved1' %}">Approved Messages ({{ count1 }})</a></li>
 
               </ul>
             </p>
