Reply model in mentor views

--- a/mentee/templates/mentor/list-converations.html
+++ b/mentee/templates/mentor/list-converations.html
@@ -44,7 +44,7 @@
         <td>{{ conv.receipient }}</td>
           <td>{{ conv.conversation }}</td>
         <td>{{ conv.sent_at|naturaltime }}</td>
-        <td> <a class="btn btn-primary btn-sm" href="{% url 'conv-messo1' pk=conv.pk %}">View Chat</a></td>
+        <td> <a class="btn btn-primary btn-sm" href="{% url 'reply1' pk=conv.pk %}">Reply Chat</a></td>
 
 
     </tr>
