Reply model in mentor views

--- a/mentee/templates/mentor/profile1.html
+++ b/mentee/templates/mentor/profile1.html
@@ -5,6 +5,15 @@
 {% block content %}
 
 <br><br><br><br>
+
+
+  <div class="row">
+        <div class="col-md-8">
+
+
+
+
+
    <div class="content-section">
       <div class="media">
          <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
@@ -28,10 +37,12 @@
         </form>
 
 
-
-
-
    </div>
+
+ </div>
+       
+  </div>
+
 
 
 
