--- a/mentee/templates/mentor/inbox1.html
+++ b/mentee/templates/mentor/inbox1.html
@@ -20,8 +20,10 @@
           <th>No</th>
           <th>From</th>
           <th>Request Content</th>
+          <th>Status</th>
           <th>View Profile</th>
            <th>Approve/Decline</th>
+
 
 
 
@@ -37,6 +39,12 @@
          <td>{{ messo.id }}</td>
         <td><a href="{% url 'detail-inbox1' pk=messo.pk %}">{{ messo.sender }}</a></td>
           <td>{{ messo.msg_content }}</td>
+
+        {% if messo.is_approved == False %}
+
+   <td> <button type="button" class="btn btn-danger btn-sm">Not Approved</button></td>
+
+        {% endif %}
 
 
     <td><a class="btn btn-info btn-sm" href="{% url 'profile-detail1' pk=messo.pk %}">View Profile</a></td>
