--- a/mentee/templates/mentor/profile_detail1.html
+++ b/mentee/templates/mentor/profile_detail1.html
@@ -13,7 +13,7 @@
 
             <div class="content-section">
       <div class="media">
-         <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+         <img class="rounded-circle account-img" src="{{ msg.sender.profile.image.url }}">
          <div class="media-body">
             <h2 class="account-heading">{{ msg.sender }}</h2>
             <p class="text-secondary">{{ msg.sender.email }}</p>
