project style cleanup

--- a/mentee/templates/menti/profile.html
+++ b/mentee/templates/menti/profile.html
@@ -4,6 +4,11 @@
 
 {% block content %}
 
+
+
+  <div class="row">
+        <div class="col-md-8">
+
    <div class="content-section">
       <div class="media">
          <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
@@ -31,6 +36,8 @@
 
 
    </div>
+        </div>
+  </div>
 
 
 
