--- a/mentee/templates/mentor/inboxdetail1.html
+++ b/mentee/templates/mentor/inboxdetail1.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-<br><br><br>
-<p>Message Content</p>
+
+<p><b>Message Content</b></p>
 
 
 <p>From: {{ messo.sender }} </p>
