--- a/mentee/templates/menti/messages-module.html
+++ b/mentee/templates/menti/messages-module.html
@@ -16,6 +16,7 @@
                 <li class="list-group-item list-group-item-light"><a href="{% url 'list' %}">Sent Messages</a></li>
                 <li class="list-group-item list-group-item-light"><a href="{% url 'inbox1'%}">Inbox</a></li>
                 <li class="list-group-item list-group-item-light"><a href="{% url 'approved'%}">Approved Messeges</a></li>
+              <li class="list-group-item list-group-item-light"><a href="{% url 'conv' %}">Conversations</a></li>
 
               </ul>
             </p>
