--- a/mentee/templates/menti/account.html
+++ b/mentee/templates/menti/account.html
@@ -3,13 +3,11 @@
 
 {% block content %}
 
-<br><br>
-   <main role="main" class="container">
-      <div class="row">
-        <div class="col-md-8">
 
-        </div>
-        <div class="col-md-12">
+
+      <div class="row">
+
+        <div class="col-md-10">
           <div class="content-section">
             <h3>Mentor Corner</h3>
             <p class='text-muted'>Choose Mentors Suggested below
@@ -24,7 +22,7 @@
             <h2 class="account-heading">{{ user.username }}</h2>
             <p class="text-secondary">{{ user.email }}</p>
               <p class="text-secondary">{{ user.profile.education }}</p>
-              <a class="btn btn-primary btn-sm" href="{% url 'send' pk=user.pk %}">Send Message</a>
+              <a class="btn btn-primary btn-sm" href="{% url 'send' pk=user.pk %}">Send Request</a>
               <a class="btn btn-info btn-sm" href="{% url 'profile-detail' pk=user.pk %}">View profile</a>
          </div>
       </div>
@@ -39,5 +37,5 @@
           </div>
         </div>
       </div>
-    </main>
+
 {% endblock %}
