--- a/mentee/templates/menti/chat-confirm-delete.html
+++ b/mentee/templates/menti/chat-confirm-delete.html
@@ -1,9 +1,9 @@
-{% extends 'mentor/base1.html' %}
+{% extends 'menti/base.html' %}
 
 
 {% block content %}
 
-
+<br><br><br>
  <div class="row">
         <div class="col-md-12">
  <div class="content-section">
@@ -19,7 +19,7 @@
 
          <input type="submit" class="btn btn-danger" value="delete">
 
-    <a href="{% url 'conv1'%}">Cancel</a>
+    <a href="{% url 'conv'%}">Cancel</a>
 
      </form>
 
