--- a/mentee/templates/mentor/list-converations.html
+++ b/mentee/templates/mentor/list-converations.html
@@ -5,14 +5,6 @@
 {% block content %}
 
 
-
-
-
-
-
-
-
-
   <div class="row">
         <div class="col-md-12">
  <div class="content-section">
@@ -25,8 +17,9 @@
           <th>No</th>
           <th>To</th>
           <th>Conversation</th>
-          <th>Time</th>
+          <th>Created At</th>
           <th>View Chat</th>
+           <th>Delete Chat</th>
 
 
 
@@ -46,6 +39,7 @@
         <td>{{ conv.sent_at|naturaltime }}</td>
 
         <td> <a class="btn btn-primary btn-sm" href="{% url 'conv-reply' pk=conv.pk %}">View Chat</a></td>
+          <td> <a class="btn btn-danger btn-sm" href="{% url 'conversation-delete' pk=conv.pk %}">Delete Conv</a></td>
 
 
     </tr>
