--- a/mentee/templates/mentor/messages-module1.html
+++ b/mentee/templates/mentor/messages-module1.html
@@ -15,7 +15,7 @@
                 <li class="list-group-item list-group-item-light"><a href="{% url 'Message1' %}">Create New Message</a></li>
                 <li class="list-group-item list-group-item-light"><a href="{% url 'list1' %} ">Sent Messages</a></li>
                 <li class="list-group-item list-group-item-light"><a href="{% url 'inbox2' %}">Requests ({{ count }})</a></li>
-              <li class="list-group-item list-group-item-light"><a href="{% url 'approved1' %}">Approved Messages ({{ count1 }})</a></li>
+              <li class="list-group-item list-group-item-light"><a href="{% url 'approved1' %}">Approved Requests ({{ count1 }})</a></li>
               <li class="list-group-item list-group-item-light"><a href="{% url 'conv1' %}">Conversations ({{ count2 }})</a></li>
 
               </ul>
