--- a/mentee/templates/menti/approved.html
+++ b/mentee/templates/menti/approved.html
@@ -8,10 +8,6 @@
 <h1>Here are Your Approved Requests</h1><br>
 
 
-
-
-
-
   <div class="row">
         <div class="col-md-12">
  <div class="content-section">
@@ -78,6 +74,40 @@
  </div>
         </div>
 </div>
+
+
+{% if is_paginated %}
+
+
+        {% if page_obj.has_previous %}
+            <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+             <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+
+            {% endif %}
+
+        {% for num in page_obj.paginator.page_range %}
+        {% if page_obj.number == num %}
+          <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+          <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+        {% endif %}
+      {% endfor %}
+
+
+        {% if page_obj.has_next %}
+        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+        <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+      {% endif %}
+
+
+
+
+        {% endif %}
+
+
+
+
+
 
 
 
