--- a/mentee/templates/menti/register.html
+++ b/mentee/templates/menti/register.html
@@ -12,8 +12,8 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
-                {{ form|crispy }}
                 {{ form1|crispy }}
+                {{ form2|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
