pdf list of approved requests in mentor

--- a/mentee/templates/mentor/approved.html
+++ b/mentee/templates/mentor/approved.html
@@ -46,9 +46,11 @@
 
    <td> <button type="button" class="btn btn-success btn-sm">Approved</button></td>
 
+
         {% endif %}
 
         <td> <a class="btn btn-primary btn-sm" href="{% url 'start-chat1' pk=approved.sender.pk %}">Start Chat</a></td>
+    <td><a class="btn btn-info btn-sm" href="{% url 'pdf1' %}">Download Pdf</a></td>
 
 
 
